# litteris

./: .editorconfig  .gitignore  .travis.yml  Application.vala  Panels.vala  README.md  Window.vala  _config.yml  com.github.raibtoffoletto.Litteris.yml  com.github.raibtoffoletto.litteris.yml  index.md  meson.build  snapcraft.yaml
.github/workflows/: main.yml
Widgets/: AppMenu.vala  Welcome.vala
assets/css/: style.scss
data/: com.github.raibtoffoletto.litteris.appdata.xml.in  com.github.raibtoffoletto.litteris.desktop  com.github.raibtoffoletto.litteris.desktop.in  com.github.raibtoffoletto.litteris.gschema.xml  database.db  database.sql  gschema.xml  meson.build
debian/: changelog  control  copyright
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.raibtoffoletto.litteris.pot  en.po  es.po  fr.po  it.po  nl.po  pl.po  pt.po  pt_BR.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  nl.po  pl.po  pt.po  pt_BR.po
src/: Application.vala  Header.vala  Window.vala  meson.build
src/Models/: MailDate.vala  Penpal.vala
src/Services/: CountryCodes.vala  DataBase.vala  Utils.vala
src/Widgets/: AppMenu.vala  ContactList.vala  Penpal.vala  PenpalDialog.vala  PenpalList.vala  PenpalStatusBar.vala  PenpalView.vala  SearchEntry.vala  Stack.vala  SyncDialog.vala  Welcome.vala
